# khronos

./: .gitignore  CMakeLists.txt  generator.sh
include/: CMakeLists.txt
include/khronos/: khronos.hh  timer.hh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/exemple-timer/: CMakeLists.txt  main.cc
src/lib/: CMakeLists.txt  timer.cc
