###############################################################################
#                                   Header                                    #
###############################################################################
project								(khronos)
cmake_minimum_required(VERSION 2.8)

###############################################################################
#                               Compile options                               #
###############################################################################
add_definitions(-g)
add_definitions(-std=c++14)

###############################################################################
#                                Dependencies                                 #
###############################################################################
find_package(Boost COMPONENTS system REQUIRED)
list        (APPEND libraries ${Boost_SYSTEM_LIBRARY})

###############################################################################
#                                 Directories                                 #
###############################################################################
include_directories (
	${CMAKE_CURRENT_SOURCE_DIR}/include
)
add_subdirectory(include)
add_subdirectory(src)
