###############################################################################
#                                Source files                                 #
###############################################################################
set (khronos_sources
	timer.cc
)

###############################################################################
#                                Build library                                #
###############################################################################
add_library(khronos ${khronos_sources})

###############################################################################
#                                   Install                                   #
###############################################################################
install(TARGETS khronos DESTINATION lib)